--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,6 @@ h2 {
   font-family: 'Montserrat', sans-serif;
   font-size: 2.5rem;
   font-weight: normal;
-  padding-bottom: 10px;
 }
 
 h3 {
@@ -46,7 +45,10 @@ a{
 a:hover {
   color: #EAF6F6;
 }
-
+.photo {
+  max-width: 30%;
+height: auto;
+}
 .top-container {
   background-color: #E4F9F5;
   position: relative;
@@ -73,6 +75,7 @@ a:hover {
 
 .intro {
   width: 30%;
+  font-size: 1.2rem;
   margin: auto;
 }
 
@@ -134,9 +137,10 @@ a:hover {
   text-decoration: none;
 }
 .logo {
-  position: relative;
-  margin-left: 250px;
-  padding-top: 0
+
+  padding: 1px 2px 1px 200px;
+
+
 
 
 }
